Fix the wrapping/padding behavior of Remarkup code block headers more thoroughly?
Summary: Ref T13118. The first fix there fixed Safari, but made Chrome weird. Try this?

Test Plan: Viewed a code block with `name=...` in Safari, Firefox and Chrome and saw consistent display without weird wrappping.

Reviewers: amckinley

Reviewed By: amckinley

Maniphest Tasks: T13118

Differential Revision: https://secure.phabricator.com/D19319

--- a/webroot/rsrc/css/core/remarkup.css
+++ b/webroot/rsrc/css/core/remarkup.css
@@ -31,7 +31,7 @@
   font-size: 13px;
   font-weight: bold;
   background: rgba({$alphablue},0.08);
-  display: inline-block;
+  display: table-cell;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   overflow: hidden;
